--- a/src/css/pc.css
+++ b/src/css/pc.css
@@ -16,3 +16,14 @@
 .footer{
     text-align: center;
 }
+
+/*登录表单样式*/
+#components-form-demo-normal-login .login-form {
+    max-width: 300px;
+}
+#components-form-demo-normal-login .login-form-forgot {
+    float: right;
+}
+#components-form-demo-normal-login .login-form-button {
+    width: 488px;
+}
