--- a/src/css/pc.css
+++ b/src/css/pc.css
@@ -27,3 +27,13 @@
 #components-form-demo-normal-login .login-form-button {
     width: 488px;
 }
+
+.leftContainer{
+    width: 400px;
+    float:left;
+    padding-top: 10px;
+}
+.carousel{
+    width: 400px;
+    float:left;
+}
